add clean gradle tasks, document